- Integration of 'Raw' right (permission to retrieve a page in 'raw' format)
- Integration of 'Viewsource' right (permission to view the source wikitext)
- Integration of 'New User Log' functionality

- Patch to 'ChangesList.php' for namespace level policy enforcement (patrol right)
- Patch to 'Pager.php' for namespace level policy enforcement (added 'browse' right)
- Patch to 'QueryPage.php' for namespace level policy enforcement (added 'browse' right)
- Patch to 'QueryPage.php' for namespace level policy enforcement (added 'browse' right)
- Patch to 'SearchEngine.php' for namespace level policy enforcement (added 'search' right)
- Patch to 'SpecialAllpages.php' for namespace level policy enforcement (added 'browse' right)
- Patch to 'SpecialContributions.php' for handling the 'rollback' right correctly
- Patch to 'SpecialLog.php': added 'readlog' right, namespace level policy enforcement 
- Patch to 'SpecialNewpages.php' for handling the 'patrol' right correctly
- Patch to 'SpecialPreferences.php' for:
	1) Fixed searchable namespace listing
	2) Fixed watchlist related toggles
	3) Fixed searchable namespace preference saving
- Patch to 'SpecialRandompage.php' for namespace level policy enforcement
- Patch to 'SpecialRecentchanges.php' for namespace level policy enforcement
- Patch to 'SpecialRecentchangeslinked.php'  for namespace level policy enforcement
- Patch to 'SpecialStatistics.php'  for namespace level policy enforcement
- Patch to 'User.php':
	1) Added hook 'UserIsAllowed' in order to integrate with enhanced permission sub-system.
	2) Modified 'isAllowed' method.
- Patch to 'Xml.php'  for namespace level policy enforcement (added 'browse' right)
========
REL1_10_2:
- Patch to 'Special:Upload.php' to for handling NS_IMAGE namespace rights
- Added 'Log/upload' permission related settings
- Patch to 'Article.php' to disable parser caching upon article saving/updating (parser cache gets 
  updated upon article viewing 'only')
 - 