@@ -46,4 +46,5 @@ REL1_10_2:
 - Added 'Log/upload' permission related settings
 - Patch to 'Article.php' to disable parser caching upon article saving/updating (parser cache gets 
   updated upon article viewing 'only')
- - 
+ - Added 'Log/delete' permission related settings
+ 
